Fixing alignment

--- a/styles/sass/partials/_fonts.scss
+++ b/styles/sass/partials/_fonts.scss
@@ -36,7 +36,13 @@ h3 {
     
 p {
     font-family: 'Ibarra Real Nova', serif;
-    font-size:2.3rem;
+    font-size:2.2rem;
     margin: 0;
     text-align: center;
+}
+
+.lordTitles p{
+    font-size:1.8rem;
+    font-weight: 800;
+    line-height:25px;
 }
