--- a/styles/sass/partials/_page2.scss
+++ b/styles/sass/partials/_page2.scss
@@ -45,7 +45,7 @@ h3 {
 }
 
 .firstColumn {
-    justify-content: flex-start;
+    justify-content: space-evenly;
     .historyContainer{
         .history{
             text-align: left;
